--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,73 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+ html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  font-family: 'Roboto', sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  outline: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+p,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.users_section {
+  width: 100%;
+  max-width: 50rem;
+  margin: auto;
+  padding: 1rem;
+}
+
+.user_card {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.user_card img {
+  width: 100%;
+}
+
+.user_card .user_data {
+  border: 1px solid #000;
+  padding: 1rem;
+  position: relative;
+}
+
+.user_card .user_data h2 {
+  font-size: 2rem;
+}
+
+.user_card .user_data .user_posts_num {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+}
