--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,50 +1,13 @@
 <section class="users_section">
   <% @users.each do |user| %>
     <%= link_to user_path(user) do %>
-      <div class="user-card">
+      <div class="user_card">
         <img src="<%=user.photo%>" alt="<%=user.name%>'s photo"/>
-        <div>
+        <div class="user_data">
           <h2><%=user.name%></h2>
-          <h3>Number of posts: <%=user.posts_counter%></h3>
+          <div class="user_posts_num">Number of posts: <%=user.post_counter%></div>
         </div>
       </div>
     <% end %>
   <% end %>
-
-
-  <div class="user_card">
-    <img src="/images/foto.jpg" alt="foto" />
-    <div class="user_data">
-      <h2>User name</h2>
-      <div class="user_posts_num">Number of posts: x</div>
-    </div>
-  </div>
-  <div class="user_card">
-    <img src="/images/foto.jpg" alt="foto" />
-    <div class="user_data">
-      <h2>User name</h2>
-      <div class="user_posts_num">Number of posts: x</div>
-    </div>
-  </div>
-  <div class="user_card">
-    <img src="/images/foto.jpg" alt="foto" />
-    <div class="user_data">
-      <h2>User name</h2>
-      <div class="user_posts_num">Number of posts: x</div>
-    </div>
-  </div>
-  <div class="user_card">
-    <img src="/images/foto.jpg" alt="foto" />
-    <div class="user_data">
-      <h2>User name</h2>
-      <div class="user_posts_num">Number of posts: x</div>
-    </div>
-  </div>
-  <div class="user_card">
-    <img src="/images/foto.jpg" alt="foto" />
-    <div class="user_data">
-      <h2>User name</h2>
-      <div class="user_posts_num">Number of posts: x</div>
-    </div>
-  </div>
 </section>
