--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,6 +50,10 @@ img {
   height: auto;
 }
 
+body {
+  font-size: 1.4rem;
+}
+
 .users_section {
   width: 100%;
   max-width: 50rem;
@@ -82,4 +86,41 @@ img {
   position: absolute;
   bottom: 1rem;
   right: 1rem;
+}
+
+.user_bio {
+  width: 100%;
+  border: 1px solid #000;
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.user_post {
+  width: 100%;
+  border: 1px solid #000;
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  padding-bottom: 3rem;
+}
+
+.user_post .user_comments_num{
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.btns{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.btns button{
+  background: #fff;
+  padding: 0.5rem 1rem;
+  border: 1px solid #000;
+  border-radius: 0.5rem;
 }
