--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,37 @@
-<div>All the Posts page</div>
+<section class="users_section">
+  <div class="user_card">
+    <img src="<%=@user.photo%>" alt="<%=@user.name%>'s photo"/>
+    <div class="user_data">
+      <h2><%=@user.name%></h2>
+      <div class="user_posts_num">Number of posts: <%=@user.post_counter%></div>
+    </div>
+  </div>
+
+  <div class="user_posts">
+    <% @user.recent_posts.each_with_index do |post, i| %>
+    <%= link_to user_post_url(id: post.id) do %>
+      <div class="user_post">
+        <h3>Post #<%= i+1 %></h3>
+        <p><%= post.text %></p>
+        <div class="user_comments_num">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
+      </div>
+    <% end %>
+    <ul class="comments_list">
+      <%comments = post.recent_comments%>
+      <% comments.each_with_index do |comment, ind| %>
+          <% user = User.find(comment.author_id) %>
+          <li><%= link_to user_path(user) do %><%=user.name%><% end %>: <%=comment.text%></li>
+      <% end %>
+    </ul>
+    <% end %>
+  </div>
+
+  <div class="btns">
+    <button>
+      <%= link_to 'Back to User', user_path(@user) %>
+    </button>
+    <button>
+      <%= link_to 'Pagination', '#'%>
+    </button>
+  </div>
+</section>
