--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     <% @user.recent_posts.each_with_index do |post, i| %>
     <%= link_to user_post_url(id: post.id) do %>
       <div class="user_post">
-        <h3>Post #<%= i+1 %></h3>
+        <h3><%= post.title %></h3>
         <p><%= post.text %></p>
         <div class="user_comments_num">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
       </div>
