--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
   <div class="user_posts">
     <% @user.recent_posts.each_with_index do |post, i| %>
       <div class="user_post">
-        <h3>Post #<%= i+1 %></h3>
+        <h3><%= post.title %></h3>
         <p><%= post.text %></p>
       <div class="user_comments_num">Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counter %></div>
     </div>
@@ -21,7 +21,7 @@
   </div>
   <div class="btns">
     <button>
-      <%= link_to 'See all Users', users_path()%>
+      <%= link_to 'Back to all Users', users_path()%>
     </button>
     <button>
       <%= link_to 'See all ' + @user.name + '´s posts', user_posts_path(@user)%>
