Changes required added

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,5 +33,6 @@
     <button>
       <%= link_to 'Pagination', '#'%>
     </button>
+    <button><%=link_to "New Post", new_post_path %></button>
   </div>
 </section>
