--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,9 @@
       </div>
     <% end %>
   <% end %>
-  <button><%=link_to "New Post", new_post_path %></button>
+  <div class="btns">
+    <button><%=link_to "New Post", new_post_path %></button>
+  </div>  
 </section>
 
 
