--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,5 +26,6 @@
     <button>
       <%= link_to 'See all ' + @user.name + '´s posts', user_posts_path(@user)%>
     </button>
+    <button><%=link_to "New Post", new_post_path %></button>
   </div>
 </section>
